HelloUltraviolet/Fixtures/RejectedSource/Procedures/MethodLookupDiagnostics/Expected.uv
//! Expected diagnostic metadata for the MethodLookupDiagnostics rejected-source specimen.

expectedDiagnostic("E-SEM-2536", "diag.15.MethodLookupDiagnostics")
